# bizha

./: .gitignore  .pre-commit-config.yaml  PLAN.md  pyproject.toml  rules.md
api/: schemas.py  server.py  sessions.py  views.py
engine/: __main__.py  bots.py  cards.py  cli.py  combos.py  engine.py  env.py  match.py  rules.py  state.py
tests/: conftest.py  test_api.py  test_combos.py  test_engine.py  test_match_env.py  test_rules.py
web/: app.js  cards.js  index.html  styles.css
