[project]
name = "bizha"
version = "0.1.0"
description = "3 人特殊扑克牌游戏：确定性引擎（RL-ready）+ FastAPI 接口 + deck-of-cards 前端"
readme = "PLAN.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "bizha" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# 接口层（FastAPI + WebSocket）。引擎层不依赖它，保持纯逻辑可向量化。
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.0",
    "pycodestyle>=2.12.0",
    "pyright[nodejs]>=1.1.400",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle 错误
    "F",    # pyflakes（包含 F841: 未使用的变量）
    "I",    # isort
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
# 捕获可变默认值和相关陷阱
extend-select = ["B006", "B008", "B039", "RUF012"]

[tool.ruff.lint.per-file-ignores]
# 测试文件常有未使用的参数（fixtures、接口实现）
"tests/**/*.py" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["engine", "api"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -n auto --maxprocesses=8 -m 'not integration'"
markers = [
    "integration: 标记为集成测试（使用 '-m \"not integration\"' 排除）",
]

[tool.pyright]
include = ["engine", "api"]
exclude = ["tests", "web", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
useLibraryCodeForTypes = true
typeCheckingMode = "standard"
